--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
+        <link ng-src=""/>
         <title> Welcome to CodeSnippets! </title>
     </head>
     <body>
-        
+        <h1> Code CodeSnippets! </h1>
+
+        Welcome to Code Snippets.
     </body>
 </html>
