--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,30 @@
     <head>
         <title> Welcome to CodeSnippets! </title>
         <!--<script src="app.js"></script>-->
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+        <script src="scripts/adal.js"></script>
+        <script src="scripts/adal-angular.js"></script>
+        <script>
+            var codeSnip = angular.module('codeSnip', ['ngRoute']);
+            codeSnip.config(function($routeProvider){
+                $routeProvider
+                .when("/", {
+                    template : "index 123"
+                })
+                .when("/test", {
+                    templateUrl: 'test.html'
+                })
+                .when("/admin",{
+                    template : "admin 123"
+                });
+            });
+        </script>
     </head>
-    <body ng-app="">
+    <body ng-app="codeSnip">
         {{ 10 + 3 }}
         <div class="container">
             <div class="row">
@@ -28,26 +46,5 @@
                 </div>
             </div>
         </div>
-        <script src="scripts\adal.js"></script>
-        <script src="scripts\adal-angular.js"></script>
-        <script>
-            angular.module('CodeSnip', ['ngRoute', 'AdalAngular'])
-            .config(['$routeProvider','$httpProvider', 'adalAuthenticationServiceProvider'], 
-            function($routeProvider, $httpProvider, adalProvider){
-                $routeProvider
-                .when("/", {
-                    templateUrl: 'index.html',
-                    requireADLogin:true
-                })
-                .when("/test", {
-                    templateUrl: 'test.html',
-                    requireADLogin:true
-                })
-                .when("/admin",{
-                    templateUrl:'admin/addSnip.html',
-                    requireADLogin:true
-                });
-            });
-        </script>
     </body>
 </html>
