--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Welcome to CodeSnippets! </title>
-        <!--<script src="app.js"></script>-->
+       
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -9,18 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
         <script src="scripts/adal.js"></script>
         <script src="scripts/adal-angular.js"></script>
-        <script>
-            var codeSnip = angular.module('codeSnip', ['ngRoute']);
-            codeSnip.config(function($routeProvider){
-                $routeProvider
-                .when("/", {
-                    templateUrl : "user/home.html"
-                })
-                .when("/admin",{
-                    templateUrl : "admin/addSnip.html"
-                });
-            });
-        </script>
+        <script src="app.js"></script>
     </head>
     <body ng-app="codeSnip">
         <div class="container">
