--- a/app/index.html
+++ b/app/index.html
@@ -32,5 +32,6 @@
                 </div>
             </div>
         </div>
+        <script src="scripts/userInfo.js"></script>
     </body>
 </html>
