moved controller to different file

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
         <script src="scripts/adal.js"></script>
         <script src="scripts/adal-angular.js"></script>
         <script src="app.js"></script>
+        <script src="admin/addSnipController.js"></script>
     </head>
     <body ng-app="codeSnip">
         <div class="container">
