--- a/app/admin/addSnip.html
+++ b/app/admin/addSnip.html
@@ -1,21 +1,24 @@
-<form>
-    <div class="form-group col-md-2">
-        <label for="language">Language</label>
-        <select id="language" class="form-control">
-            <option> Select Laguage </option>
-            <option> C# </option>
-            <option> AngularJS </option>
-        </select>
-    </div>
-    <div class="form-group col-md-6">
-        <label for="title"> Title </label>
-        <input id="title" class="form-control" type="text">
-    </div>
-    <div class="form-group col-md-10">
-        <label for="codeSnip"> Code Snippet </label>
-        <textarea id="codeSnip" class="form-control" rows="10" cols="100"></textarea>
-    </div>
-    <div class="form-group col-md-12">
-        <center><input type="submit"></center>
-    </div>
-</form>
+<div ng-app="codeSnip" ng-controller="addSnipCtrl">
+    <form>
+        <div class="form-group col-md-2">
+            <label for="language">Language</label>
+            <select id="language" class="form-control" ng-model="language">
+                <option> Select Laguage </option>
+                <option> C# </option>
+                <option> AngularJS </option>
+            </select>
+        </div>
+        <div class="form-group col-md-6">
+            <label for="title"> Title </label>
+            <input id="title" class="form-control" type="text" ng-model="title">
+        </div>
+        <div class="form-group col-md-10">
+            <label for="codeSnip"> Code Snippet </label>
+            <textarea id="codeSnip" class="form-control" rows="10" cols="100" ng-model="codeSnip"></textarea>
+        </div>
+        <div class="form-group col-md-12">
+            <center><input type="submit" ng-click="alert('123');"></input></center>
+        </div>
+    </form>
+</div>
+
