--- a/app/login.html
+++ b/app/login.html
@@ -1,19 +1,56 @@
 <html>
     <head>
         <h3>Login to CodeSnip</h3>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-        <script type="javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>        
     </head>
     <body>
+         <script>
+            window.fbAsyncInit = function() {
+                FB.init({
+                appId      : '1898644503730450',
+                cookie     : true,
+                xfbml      : true,
+                version    : 'v2.8'
+                });
+                FB.AppEvents.logPageView();   
+
+                FB.getLoginStatus(function(response) {
+                      if(response.status == 'connected'){
+                        FB.api('/me', function(response){
+                            console.log(response.name);
+                            sessionStorage.userName = response.name;
+                        });
+                        //location.href = 'http://localhost:8080/#/'
+                    }
+                });
+
+                FB.api('/me', function(response){
+                    console.log(JSON.stringify(response));
+                });
+            };
+
+            (function(d, s, id){
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {return;}
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
         <div class="container">
             <div style="height:100px"></div>
             <div class="row" >
                 <div class="column col-sm-4">
                 </div>
-                <div class="column col-sm-4" style="border:solid 1px gray">
+                <div class="column col-sm-4" >    
+                    <!--style="border:solid 1px gray"-->
                    <div class="row">&nbsp;</div>
 
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="column col-sm-4">
                             <label>UserName</label>
                         </div>
@@ -37,9 +74,16 @@
                     
                     <div class="col-sm-12">
                         <center><input type="submit"></center>
-                    </div>
+                    </div>-->
 
                     <div class="row">&nbsp;</div>
+
+                    <div class="row" class="col-sm-12">
+                        <div class="fb-login-button" data-width="100" data-max-rows="1" data-size="large" 
+                            data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" 
+                            data-use-continue-as="false">
+                        </div>
+                    </div> 
                 </div>
                 <div class="column col-sm-4">
                 </div>
