Login and Logout with Facebook working

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,8 @@
                 <div class="column col-md-4">
                     <a href="#admin">admin</a>
                     <a href="#/">home</a>
-                    Welcome <span id="userName"></label>
+                    Welcome <span id="userName"></span>
+                    <a href="logout.html">Logout</a>
                 </div>
             </div>
             <div class="row">   
@@ -36,8 +37,5 @@
                 </div>
             </div>
         </div>
-        <script>
-            document.getElementById('userName').innerHTML = sessionStorage.userName;
-        </script>
     </body>
 </html>
