--- a/app/admin/addSnip.html
+++ b/app/admin/addSnip.html
@@ -2,8 +2,7 @@
     <form>
         <div class="form-group col-md-2">
             <label for="language">Language</label>
-            <select id="language" class="form-control" ng-model="language">
-                <option> Select Laguage </option>
+            <select id="language" class="form-control" ng-model="language" title="Select Language">
                 <option> C# </option>
                 <option> AngularJS </option>
             </select>
@@ -16,8 +15,8 @@
             <label for="codeSnip"> Code Snippet </label>
             <textarea id="codeSnip" class="form-control" rows="10" cols="100" ng-model="codeSnip"></textarea>
         </div>
-        <div class="form-group col-md-12">
-            <center><input type="submit" ng-click="alert('123');"></input></center>
+        <div class="form-group col-md-10">
+            <center><button type="button" class="btn btn-primary" ng-click="Submit();">Submit</button></center>
         </div>
     </form>
 </div>
