--- a/app/admin/addSnip.html
+++ b/app/admin/addSnip.html
@@ -4,7 +4,8 @@
             <label for="language">Language</label>
             <select id="language" class="form-control" ng-model="language" title="Select Language">
                 <option> C# </option>
-                <option> AngularJS </option>
+                <option> Java </option>
+                <option> Python </option>
             </select>
         </div>
         <div class="form-group col-md-6">
