--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,11 @@
                 </div>
                 <div class="column col-md-4">
                     <div class="row">
-                        Welcome <span id="userName"></span>
+                        <b>Welcome <span id="userName"></span></b>
                     </div>
                     <div class="row">
-                        <a href="#admin">admin</a>
-                        <a href="#/">home</a>
+                        <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
+                        <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
                         <a href="logout.html">Logout</a>
                     </div>
                 </div>
