--- a/app/index.html
+++ b/app/index.html
@@ -1,49 +1,54 @@
 <html>
-    <head>
-        <title> Welcome to CodeSnippets! </title>
-       
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-        <script src="scripts/adal.js"></script>
-        <script src="scripts/adal-angular.js"></script>
-        <script src="app.js"></script>
-        <script src="admin/addSnipController.js"></script>
-    </head>
-    <body ng-app="codeSnip">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="column col-md-4">
-                    <h2><b><u><center> Code Snippets </center> </u> </b> </h2>
-                </div>
-                <div class="column col-md-4">
-                    <div class="row">
-                        <b>Welcome <span id="userName"></span></b>
-                    </div>
-                    <div class="row">
-                        <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
-                        <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
-                        <a href="logout.html">Logout</a>
-                    </div>
-                </div>
+
+<head>
+    <title> Welcome to CodeSnippets! </title>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="scripts/adal.js"></script>
+    <script src="scripts/adal-angular.js"></script>
+    <script src="app.js"></script>
+    <script src="admin/addSnipController.js"></script>
+</head>
+
+<body ng-app="codeSnip">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="column col-md-4">
+                <h2><b><u><center> Code Snippets </center> </u> </b> </h2>
             </div>
-            <div class="row">   
-                <div class="column col-sm-2">
-                    <h3>Categories</h3>
-                    <li>C#</li>
-                    <li>Java</li>
-                    <li>Python</li>
+            <div class="column col-md-4">
+                <div class="row">
+                    <b>Welcome <span id="userName"></span></b>
                 </div>
-                <div class="column col-sm-10">
-                    <div ng-view></div>
+                <div class="row">
+                    <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
+                    <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
+                    <a href="logout.html">Logout</a>
                 </div>
             </div>
         </div>
-        <script>
-            document.getElementById('userName').innerHTML = sessionStorage.userName;
-        </script>
-    </body>
+        <div class="row">
+            <div class="column col-sm-2">
+                <h3>Categories</h3>
+                <li>C#</li>
+                <li>Java</li>
+                <li>Python</li>
+            </div>
+            <div class="column col-sm-10">
+                <div ng-view></div>
+            </div>
+        </div>
+    </div>
+    <script>
+        document.getElementById('userName').innerHTML = sessionStorage.userName;
+    </script>
+</body>
+
 </html>
