--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
     <script src="scripts/adal-angular.js"></script>
     <script src="app.js"></script>
     <script src="admin/addSnipController.js"></script>
+    <script src="admin/listCodeSnippetsController.js"></script>
+     <script src="admin/snipDetailController.js"></script>
 </head>
 
 <body ng-app="codeSnip">
@@ -34,14 +36,14 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="column col-sm-2">
+        <div class="row" >
+            <div class="col-sm-2">
                 <h3>Categories</h3>
                 <li>C#</li>
                 <li>Java</li>
                 <li>Python</li>
             </div>
-            <div class="column col-sm-10">
+            <div class="col-sm-10">
                 <div ng-view></div>
             </div>
         </div>
