changed look of website

--- a/app/admin/snipDetail.html
+++ b/app/admin/snipDetail.html
@@ -1,3 +1,10 @@
 <div ng-controller="snipDetailController">
-    <div>Snip Detail {{ID}}</div>
+    <!--<div>Snip Detail {{ID}}</div>-->
+    <div>
+        <label><h3>{{snipDetail.title}}</h3></label>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">{{snipDetail.CodeSnippet}}</div>
+    </div>
+
 </div>
