--- a/app/admin/listCodeSnippets.html
+++ b/app/admin/listCodeSnippets.html
@@ -1,12 +1,23 @@
 
 <div>
-    <!--<div class="row">
-        <a href="#addSnip">Add Code Snippet</a>
-    </div>-->
-    <div class="row" style="height:20px;"></div>
-    <div class="row"></div>
+    <div class="row">&nbsp;</div>
+
+    <div class="row">
+        <div class="col-md-1">
+            <h4><label>Search</label></h4>
+        </div>
+        <div class="col-md-4">
+            <input type="text" class="form-control"></input>
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-3" align="right">
+            <h4><a href="#addSnip">Add Code Snippet</a></h4>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-sm-12" ng-controller="listCodeSnippetsController">
-            <div class="row" ng-repeat="snip in codeSnippets" style="background:lightblue; margin:3px">
+            <div class="row" ng-repeat="snip in codeSnippets" style="background:lightgray; margin:3px">
                 <h4><a href="#snipDetail/{{snip.id}}">{{snip.title}}</a></h4>
             </div>
         </div>
