--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,15 @@
 
 <body ng-app="codeSnip">
     <div class="container">
-        <div class="row">
+        <div class="row" style="background:#082c42">
             <div class="col-md-4"></div>
             <div class="column col-md-4">
-                <h2><b><u><center> Code Snippets </center> </u> </b> </h2>
+                <div class="page-header"><h2><b><center> <font color="white">Code Snippets</font> </div> </center> </b> </h2>
             </div>
-            <div class="column col-md-4">
+            <div class="col-md-2"></div>
+            <div class="column col-md-2">
                 <div class="row">
-                    <b>Welcome <span id="userName"></span></b>
+                    <font color="white"><b>Welcome <span id="userName"></span></b></font>
                 </div>
                 <div class="row">
                     <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
@@ -36,14 +37,14 @@
                 </div>
             </div>
         </div>
-        <div class="row" >
+        <div class="row" style="background:#94cdc4; height:550px;" >
             <div class="col-sm-2">
                 <h3>Categories</h3>
                 <li>C#</li>
                 <li>Java</li>
                 <li>Python</li>
             </div>
-            <div class="col-sm-10">
+            <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
             </div>
         </div>
