--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container-fluid">
     <div class="row">&nbsp;</div>
 
     <div class="row">
@@ -16,9 +16,11 @@
     </div>
 
     <div class="row">
+        <hr>
         <div class="col-sm-12" ng-controller="listCodeSnippetsController">
-            <div class="row" ng-repeat="snip in codeSnippets" style="background:lightgray; margin:3px">
+            <div class="row" ng-repeat="snip in codeSnippets">
                 <h4><a href="#snipDetail/{{snip.id}}">{{snip.title}}</a></h4>
+                <hr>
             </div>
         </div>
     </div>
