added admin page, fetched languages dynamically

--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-md-4"></div>
         <div class="col-md-3" align="right">
-            <h4><a href="#addSnip">Add Code Snippet</a></h4>
+            <h5><b><a href="#addSnip">Add Code Snippet</a></b></h5>
         </div>
     </div>
 
