--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
     <script src="app.js"></script>
     <script src="admin/addSnipController.js"></script>
     <script src="user/listCodeSnippetsController.js"></script>
-     <script src="user/snipDetailController.js"></script>
+    <script src="user/snipDetailController.js"></script>
+    <script src="user/languageController.js"></script>
 </head>
 
 <body ng-app="codeSnip">
@@ -37,13 +38,12 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="background:#94cdc4; height:550px;" >
+        <div class="row" style="background:#94cdc4; height:550px;" ng-controller="languageController" >
             <div class="col-sm-2">
-                <h3>Categories</h3>
-                <div>&nbsp;</div>
-                <a href="#category"><h4><li><b>C#</b></li></h4></a>
-                <a href="#category"><h4><li><b>Java</b></li></h4></a>
-                <a href="#category"><h4><li><b>Python</b></li></h4></a>
+                <div class="row">&nbsp;</div>
+
+                <h4><label>Categories</label></h4>
+                <a href="#language/{{language.languageId}}" ng-repeat="language in languages"><h4><b>{{language.languageName}}</b></h4></a>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
