--- a/app/index.html
+++ b/app/index.html
@@ -26,15 +26,15 @@
             <div class="column col-md-4">
                 <div class="page-header"><h2><b><center> <font color="white">Code Snippets</font> </div> </center> </b> </h2>
             </div>
-            <div class="col-md-2"></div>
-            <div class="column col-md-2">
-                <div class="row">
+            <div class="col-md-1"></div>
+            <div class="column col-md-3">
+                <div class="row" align="right">
                     <font color="white"><b>Welcome <span id="userName"></span></b></font>
                 </div>
-                <div class="row">
+                <div class="row" align="right">
                     <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
                     <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
-                    <a href="logout.html">Logout</a>
+                    <a href="logout.html">Logout</a>&nbsp;
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
             <div class="col-sm-2">
                 <div class="row">&nbsp;</div>
 
-                <h4><label>Categories</label></h4>
+                <h4><label>Languages</label></h4>
                 <a href="#language/{{language.languageId}}" ng-repeat="language in languages"><h4><b>{{language.languageName}}</b></h4></a>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
