SnipDetail now integrated with API

--- a/app/admin/addSnip.html
+++ b/app/admin/addSnip.html
@@ -1,5 +1,6 @@
 <div ng-app="codeSnip" ng-controller="addSnipCtrl">
     <form>
+        <div class="row">&nbsp;</div>
         <div class="form-group col-md-2">
             <label for="language">Language</label>
             <select id="language" class="form-control" ng-model="language" title="Select Language">
