--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
     <div class="row">&nbsp;</div>
 
@@ -20,7 +19,7 @@
             <table class="table table-bordered table-inverse">
                 <tr class="row" ng-repeat="snip in codeSnippets">
                     <td class="column">
-                        <h4><b><a href="#snipDetail/{{snip.id}}">{{snip.title}}</a></b></h4>
+                        <h4><b><a href="#snipDetail/{{snip._id}}">{{snip.title}}</a></b></h4>
                     </td>
                 </tr>
             </table>
