--- a/app/user/snipDetail.html
+++ b/app/user/snipDetail.html
@@ -1,10 +1,9 @@
-<div ng-controller="snipDetailController">
-    <!--<div>Snip Detail {{ID}}</div>-->
-    <div>
-        <label><h3>{{snipDetail.title}}</h3></label>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">{{snipDetail.CodeSnippet}}</div>
-    </div>
-
+<div ng-controller="snipDetailController" class="container-fluid">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-md-12"><h3>{{snipDetail.title}}</h3></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">{{snipDetail.codesnippet}}</div>
+        </div>
 </div>
