--- a/app/user/snipDetail.html
+++ b/app/user/snipDetail.html
@@ -6,4 +6,7 @@
         <div class="row">
             <div class="col-sm-12">{{snipDetail.codesnippet}}</div>
         </div>
+        <div class="form-group col-md-10">
+            <center><button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button></center>
+        </div>
 </div>
