--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="listCodeSnippetsController">
     <div class="row">&nbsp;</div>
 
     <div class="row">
@@ -6,16 +6,17 @@
             <h4><label>Search</label></h4>
         </div>
         <div class="col-md-4">
-            <input type="text" class="form-control"></input>
+            <input type="text" class="form-control" ng-model="SearchText"></input>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-1"><button class="btn btn-primary" ng-click="SearchCodeSnippets();">Search</button> </div>
+        <div class="col-md-3"></div>
         <div class="col-md-3" align="right">
             <h5><b><a href="#addSnip">Add Code Snippet</a></b></h5>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-12" ng-controller="listCodeSnippetsController" ng-init="GetCodeSnippets();">
+        <div class="col-sm-12" ng-init="GetCodeSnippets();">
             <table class="table table-bordered table-inverse">
                 <tr class="row" ng-repeat="snip in codeSnippets">
                     <td class="col-md-12">
