--- a/app/index.html
+++ b/app/index.html
@@ -38,12 +38,12 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="background:#94cdc4; height:550px;" ng-controller="languageController" >
-            <div class="col-sm-2">
+        <div class="row" style="background:#94cdc4; height:550px;"  ng-controller="listCodeSnippetsController">
+            <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
 
                 <h4><label>Languages</label></h4>
-                <a href="#language/{{language.languageId}}" ng-repeat="language in languages"><h4><b>{{language.languageName}}</b></h4></a>
+                <div ng-repeat="language in languages" ng-click="CodeSnippetsByLanguage(language.languageName);"><h4><b>{{language.languageName}}</b></h4></div>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
