--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -1,4 +1,13 @@
-<div class="container-fluid" ng-controller="listCodeSnippetsController">
+<script>
+    // document.getElementById("SearchInput").onkeydown = function(e){
+    //     if(e.keyCode == 13){
+    //         var searchText = document.getElementById('SearchInput').text;
+    //         angular.element(document.getElementById('SearchButton')).scope().SearchCodeSnippets(searchText);
+    //     }
+    // };
+</script>
+
+<div class="container-fluid">
     <div class="row">&nbsp;</div>
 
     <div class="row">
@@ -6,9 +15,9 @@
             <h4><label>Search</label></h4>
         </div>
         <div class="col-md-4">
-            <input type="text" class="form-control" ng-model="SearchText"></input>
+            <input type="text" class="form-control" id="SearchInput" ng-model="SearchText"></input>
         </div>
-        <div class="col-md-1"><button class="btn btn-primary" ng-click="SearchCodeSnippets();">Search</button> </div>
+        <div class="col-md-1"><button class="btn btn-primary" id="SearchButton" ng-click="SearchCodeSnippets();">Search</button> </div>
         <div class="col-md-3"></div>
         <div class="col-md-3" align="right">
             <h5><b><a href="#addSnip">Add Code Snippet</a></b></h5>
