--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="background:#94cdc4; height:550px;"  ng-controller="listCodeSnippetsController">
+        <div class="row" style="background:#94cdc4; height:550px;">
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
 
