--- a/app/user/listCodeSnippets.html
+++ b/app/user/listCodeSnippets.html
@@ -1,13 +1,4 @@
-<script>
-    // document.getElementById("SearchInput").onkeydown = function(e){
-    //     if(e.keyCode == 13){
-    //         var searchText = document.getElementById('SearchInput').text;
-    //         angular.element(document.getElementById('SearchButton')).scope().SearchCodeSnippets(searchText);
-    //     }
-    // };
-</script>
-
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="listCodeSnippetsController">
     <div class="row">&nbsp;</div>
 
     <div class="row">
