--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script src="admin/addSnipController.js"></script>
     <script src="user/listCodeSnippetsController.js"></script>
     <script src="user/snipDetailController.js"></script>
+    <script src="user/languageService.js"></script>
     <script src="user/languageController.js"></script>
 </head>
 
@@ -43,7 +44,7 @@
                 <div class="row">&nbsp;</div>
 
                 <h4><label>Languages</label></h4>
-                <div ng-repeat="language in languages" ng-click="CodeSnippetsByLanguage(language.languageName);"><h4><b>{{language.languageName}}</b></h4></div>
+                <div ng-repeat="language in languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);"><h4><b>{{language.languageName}}</b></h4></div>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
