introduced listCodeSnippetsService. achieved filter code snippets by language through broadcast and recieve.

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <script src="scripts/adal-angular.js"></script>
     <script src="app.js"></script>
     <script src="admin/addSnipController.js"></script>
+    <script src="user/codesnippets/listCodeSnippetsService.js"></script>
     <script src="user/codesnippets/listCodeSnippetsController.js"></script>
     <script src="user/codesnippetdetail/snipDetailController.js"></script>
     <script src="user/language/languageService.js"></script>
