--- a/app/user/codesnippetdetail/snipDetail.html
+++ b/app/user/codesnippetdetail/snipDetail.html
@@ -7,6 +7,11 @@
             <div class="col-sm-12">{{snipDetail.codesnippet}}</div>
         </div>
         <div class="form-group col-md-10">
-            <center><button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button></center>
+            <div class="col-sm-6" align="right">
+                <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
+            </div>
+            <div class="col-sm-6" align="left">
+                <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
+            </div>
         </div>
 </div>
