--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -1,4 +1,4 @@
-<div ng-controller="snipDetailController" class="container-fluid">
+<div ng-controller="codeSnipDetailController" class="container-fluid">
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col-md-12"><h3>{{snipDetail.title}}</h3></div>
