Moved addsnip code to service

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
     <script src="scripts/adal.js"></script>
     <script src="scripts/adal-angular.js"></script>
     <script src="app.js"></script>
-    <script src="admin/addSnipController.js"></script>
+    <script src="user/addcodesnippet/addCodeSnippetService.js"></script>
+    <script src="user/addcodesnippet/addCodeSnippetController.js"></script>
     <script src="user/codesnippets/listCodeSnippetsService.js"></script>
     <script src="user/codesnippets/listCodeSnippetsController.js"></script>
     <script src="user/codesnippetdetail/codeSnipDetailService.js"></script>
