--- a/app/user/addcodesnippet/addCodeSnippet.html
+++ b/app/user/addcodesnippet/addCodeSnippet.html
@@ -1,4 +1,4 @@
-<div ng-app="codeSnip" ng-controller="addSnipCtrl">
+<div ng-app="codeSnip" ng-controller="addCodeSnippetController">
     <form>
         <div class="row">&nbsp;</div>
         <div class="form-group col-md-2">
