Added pagination for list code snippets

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script data-require="ui-bootstrap@*" data-semver="0.12.1" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    
     <script src="scripts/adal.js"></script>
     <script src="scripts/adal-angular.js"></script>
     <script src="app.js"></script>
+
     <script src="user/addcodesnippet/addCodeSnippetService.js"></script>
     <script src="user/addcodesnippet/addCodeSnippetController.js"></script>
     <script src="user/codesnippets/listCodeSnippetsService.js"></script>
@@ -42,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="background:#94cdc4; height:550px;">
+        <div class="row" style="background:#94cdc4; height:470px;">
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
 
