--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -26,13 +26,26 @@
     <br>
     <div class="row">
         <div class="col-sm-12 table-responsive" ng-init="GetCodeSnippets();">
-            <table class="table table-condensed">
-                <tr class="row " ng-repeat="snip in codeSnippets">
-                    <td class="col-md-12">
-                        <h4><b><a href="#snipDetail/{{snip._id}}">{{snip.title}}</a></b></h4>
-                    </td>
-                </tr>
-            </table>
+            <div style="height:300px; border:solid 2px gray">
+                <table class="table table-condensed table-bordered">
+                    <tr class="row " ng-repeat="snip in codeSnippets">
+                        <td class="col-md-12">
+                            <h4><b>
+                                <a href="#snipDetail/{{snip._id}}">{{snip.title}}</a>
+                            </b></h4>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div align="center">
+                <pagination 
+                    items-per-page="numPerPage"
+                    ng-model="currentPage" 
+                    total-items="codeSnippetsReceived.length" 
+                    max-size="maxSize" 
+                    boundary-links="true">
+                </pagination>
+            </div>
         </div>
     </div>
 </div>
