--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -3,14 +3,16 @@
         <div class="row">
             <div class="col-md-12"><h3>{{snipDetail.title}}</h3></div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">{{snipDetail.codesnippet}}</div>
-        </div>
-        <div class="form-group col-md-10">
-            <div class="col-sm-6" align="right">
-                <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
+        <div class="row" style="height:320px;overflow:scroll;">
+            <div class="col-sm-12">
+                <pre>{{snipDetail.codesnippet}}</pre>
             </div>
-            <div class="col-sm-6" align="left">
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="form-group col-md-10">
+            <div class="col-sm-12" align="center">
+                <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
+                
                 <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
             </div>
         </div>
