--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,7 @@
         <div class="row" style="background:#94cdc4; height:470px;">
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
-
-                <h4><label>Languages</label></h4>
+                <h4><label><u>Filter by Language</u></label></h4>
                 <div ng-repeat="language in languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);"><h4><b>{{language.languageName}}</b></h4></div>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
