--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -11,28 +11,35 @@
     <div class="row">&nbsp;</div>
 
     <div class="row">
-        <div class="col-md-1">
-            <h4><label>Search</label></h4>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
             <input type="text" class="form-control" id="SearchInput" ng-model="SearchText"></input>
         </div>
         <div class="col-md-1"><button class="btn btn-primary" id="SearchButton" ng-click="SearchCodeSnippets();">Search</button> </div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3" align="right">
-            <h5><b><a href="#addSnip">Add Code Snippet</a></b></h5>
+        <div class="col-md-6" align="right">
+            <h4><b><a href="#addSnip">Add Code Snippet</a></b></h4>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-sm-12 table-responsive" ng-init="GetCodeSnippets();">
-            <div style="height:300px; border:solid 2px #082a12">
+            <div style="height:300px; border:solid 2px #082a12;">
                 <div class="table table-condensed">
-                    <div class="row " ng-repeat="snip in codeSnippets">
-                        <div class="col-md-12">
-                            <h3><b>&nbsp;
+                    <div class="bg-success">
+                        <div class="column col-sm-10">
+                            <h4><b>&nbsp;<span>Title</span></b></h4>
+                        </div>
+                        <div class="column col-sm-2">
+                            <h4><b>&nbsp;<span>Language</span></b></h4>
+                        </div>
+                    </div>
+                    <div class="row" ng-repeat="snip in codeSnippets">
+                        <div class="column col-sm-10">
+                            <h4><b>&nbsp;
                                 <a href="#snipDetail/{{snip._id}}">{{snip.title}}</a>
-                            </b></h3>
+                            </b></h4>
+                        </div>
+                        <div class="column col-sm-2">
+                            <b>{{snip.language}}</b>
                         </div>
                     </div>
                 </div>
