Changed language to category in some places

--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -29,7 +29,7 @@
                             <h4><b>&nbsp;<span>Title</span></b></h4>
                         </div>
                         <div class="column col-sm-2">
-                            <h4><b>&nbsp;<span>Language</span></b></h4>
+                            <h4><b>&nbsp;<span>Category</span></b></h4>
                         </div>
                     </div>
                     <div class="row" ng-repeat="snip in codeSnippets">
