--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,9 @@
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
                 <h4><label><u>Filter by Category</u></label></h4>
-                <div ng-repeat="language in languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);"><h4><b>{{language.languageName}}</b></h4></div>
+                <a href="" ng-repeat="language in languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
+                    <h4><b>{{language.languageName}}</b></h4>
+                </a>
             </div>
             <div class="col-sm-10" style="background:#94cdc4">
                 <div ng-view></div>
