--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 
 <head>
     <title> CodeSnippets! </title>
-
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -15,6 +14,7 @@
     <script src="scripts/adal.js"></script>
     <script src="scripts/adal-angular.js"></script>
     <script src="app.js"></script>
+    <script src="scripts/config.js"></script>
 
     <script src="user/addcodesnippet/addCodeSnippetService.js"></script>
     <script src="user/addcodesnippet/addCodeSnippetController.js"></script>
