removed logout for now changed login info to guest

--- a/app/index.html
+++ b/app/index.html
@@ -36,12 +36,12 @@
             <div class="col-md-1"></div>
             <div class="column col-md-3">
                 <div class="row" align="right">
-                    <font color="white"><b>Welcome <span id="userName"></span></b></font>
+                    <font color="white"><b>Welcome <span id="userName1">Guest</span></b></font>
                 </div>
                 <div class="row" align="right">
                     <a href="#admin">Admin</a>&nbsp;&nbsp;&nbsp;
                     <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
-                    <a href="logout.html">Logout</a>&nbsp;
+                    <!--<a href="logout.html">Logout</a>&nbsp;-->
                 </div>
             </div>
         </div>
