--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,13 +1,13 @@
-<html>
-    <body>
-        <div class="container-fluid">
-            <div class="row">&nbsp;</div>
+<div class="container-fluid">
+    <div class="row">&nbsp;</div>
 
-            <div class="row">
-                <h4><b>Manage Languages</b></h4>
-            </div>
-            <div class="row">
-                <h4><b>Review Code Snippets</b></h4>
-            </div>
-    </body>
-</html>
+    <div class="row">
+        <h4><b>Manage Languages</b></h4>
+    </div>
+    <div class="row">
+        <h4><b><a href="#reviewcodesnippet">Review Code Snippets</a></b></h4>
+    </div>
+    <div class="row">
+        <h4><b><a href="#addCategory">Add new Category</a></b></h4>
+    </div>
+</div>
