Added edit page from code snippet detail

--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -4,14 +4,14 @@
         </div>
         <div class="row" style="height:320px;overflow:scroll;">
             <div class="col-sm-12">
-                <pre>{{snipDetail.codesnippet}}</pre>
+                <pre style="height: 350px;">{{snipDetail.codesnippet}}</pre>
             </div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="form-group col-md-10">
             <div class="col-sm-12" align="center">
+                <a class="btn btn-primary" href="#editSnipDetail/{{ID}}">Edit</a>
                 <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
-                
                 <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
             </div>
         </div>
