Update functionality working. Only after it should reflect changes in previous screen alos.

--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -10,7 +10,7 @@
         <div class="row">&nbsp;</div>
         <div class="form-group col-md-10">
             <div class="col-sm-12" align="center">
-                <a class="btn btn-primary" href="#editSnipDetail/{{ID}}">Edit</a>
+                <a class="btn btn-primary" href="#editSnipDetail/{{_id}}">Edit</a>
                 <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
                 <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
             </div>
