added update and add categories. Need to cmplete functionality

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,13 +1,10 @@
 <div class="container-fluid">
     <div class="row">&nbsp;</div>
-
     <div class="row">
-        <h4><b>Manage Languages</b></h4>
-    </div>
+            <h4><b><a href="#manageCategories">Manage Categories</a></b></h4>
+        </div>
     <div class="row">
         <h4><b><a href="#reviewcodesnippet">Review Code Snippets</a></b></h4>
     </div>
-    <div class="row">
-        <h4><b><a href="#addCategory">Add new Category</a></b></h4>
-    </div>
+
 </div>
