admincontroller added, allow only if loggedin to facebook

--- a/app/login.html
+++ b/app/login.html
@@ -70,13 +70,13 @@
                                 
                                 <div class="row">&nbsp;</div>
 
-                                <div class="row">
+                                <!-- <div class="row">
                                     <div class="col-sm-12">
                                         <center><a class="btn btn-primary btn-md" href="../#admin">Office 365</a></center>
                                     </div>
                                 </div>
 
-                                <div class="row">&nbsp;</div>
+                                <div class="row">&nbsp;</div> -->
 
                                 <div class="row">
                                     <div class="col-sm-12">
