--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="adminController">
     <div class="row">&nbsp;</div>
     <div class="row">
             <h4><b><a href="#manageCategories">Manage Categories</a></b></h4>
