--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,8 @@
     <script src="user/codesnippetdetail/codeSnipDetailController.js"></script>
     <script src="user/language/languageService.js"></script>
     <script src="user/language/languageController.js"></script>
+    <script src="admin/adminController.js"></script>
+
 </head>
 
 <body ng-app="codeSnip">
@@ -42,7 +44,7 @@
                 <div class="row" align="right">
                     <a href="#admin" ng-hide="!isAdmin">Admin</a>&nbsp;&nbsp;&nbsp;
                     <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
-                    <a href="logout.html" ng-hide="!isUserLoggedIn">Logout</a>&nbsp;
+                    <a href="logout.html" ng-click="logout();" ng-hide="!isUserLoggedIn">Logout</a>&nbsp;
                 </div>
             </div>
         </div>
