added google authentication

--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,12 @@
             <div class="col-md-1"></div>
             <div class="column col-md-3">
                 <div class="row" align="right">
-                    <font color="white"><b>Welcome <span id="userName1">{{userName}}</span></b></font>
+                    <font color="white"><b><span id="userName1">{{GreetingMessage}}</span></b></font>
                 </div>
                 <div class="row" align="right">
                     <a href="#admin" ng-hide="!isAdmin">Admin</a>&nbsp;&nbsp;&nbsp;
                     <a href="#/">Home</a>&nbsp;&nbsp;&nbsp;
-                    <a href="logout.html" ng-click="logout();" ng-hide="!isUserLoggedIn">Logout</a>&nbsp;
+                    <a href="logout.html">Logout</a>&nbsp;                    
                 </div>
             </div>
         </div>
@@ -61,9 +61,6 @@
             </div>
         </div>
     </div>
-    <script>
-        // document.getElementById('userName').innerHTML = sessionStorage.userName;
-    </script>
 </body>
 
 </html>
