languages not listed fixed; Other data link error fixed

--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="collapse" id="others">
                                 <div class="card card-body">
-                                    <a href="" ng-repeat="other in Others" ng-click="GetCodeSnippetsByLanguage(library.languageName);">
+                                    <a href="" ng-repeat="other in Others" ng-click="GetCodeSnippetsByLanguage(other.languageName);">
                                         <h4><b>{{other.languageName}}</b></h4>
                                     </a>
                                 </div>
